# ChangeLog for dev-util/strace
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/strace/ChangeLog,v 1.200 2014/03/24 15:08:07 ago Exp $

  24 Mar 2014; Agostino Sarubbo <ago@gentoo.org> strace-4.8.ebuild:
  Stable for ppc, wrt bug #501648

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> strace-4.8.ebuild:
  Stable for alpha, wrt bug #501648

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org> strace-4.8.ebuild:
  Stable for ia64, wrt bug #501648

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> strace-4.8.ebuild:
  Stable for ppc64, wrt bug #501648

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> strace-4.8.ebuild:
  Stable for sparc, wrt bug #501648

  10 Mar 2014; Johannes Huber <johu@gentoo.org> strace-4.8.ebuild:
  x86 stable, bug #501648

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> strace-4.8.ebuild:
  amd64 stable, bug #501648

  28 Feb 2014; Markus Meier <maekke@gentoo.org> strace-4.8.ebuild:
  arm stable, bug #501648

  20 Feb 2014; Jeroen Roovers <jer@gentoo.org> strace-4.8.ebuild:
  Stable for HPPA (bug #501648).

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> strace-4.8.ebuild,
  strace-9999.ebuild:
  Add arm64 love.

  29 Nov 2013; Mike Frysinger <vapier@gentoo.org> strace-4.8.ebuild,
  strace-9999.ebuild:
  Fix USE=-perl thinko #492826 by Duncan.

  28 Nov 2013; Mike Frysinger <vapier@gentoo.org> strace-4.8.ebuild,
  strace-9999.ebuild:
  Add USE=perl to control perl script #489478 by Nikoli.

*strace-4.8 (09 Jun 2013)

  09 Jun 2013; Mike Frysinger <vapier@gentoo.org> +strace-4.8.ebuild:
  Version bump.

  02 May 2013; Mike Frysinger <vapier@gentoo.org> strace-4.7.ebuild,
  strace-9999.ebuild:
  Add support for user patches.

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> strace-4.7.ebuild,
  strace-9999.ebuild:
  Add ~arm-linux keywords.

  24 Sep 2012; Raúl Porcel <armin76@gentoo.org> strace-4.7.ebuild:
  alpha/s390/sh/sparc stable wrt #419803
