@@ -11,29 +11,31 @@ DIST strace-4.6-x32.patch.xz 142780 SHA256 78d196ea92d6d23a390ec8d00c7b4832f0120
 DIST strace-4.6.tar.xz 403788 SHA256 9ef9aa41b6118578e33ef4833b8a04209d6cc062546c28efd715f283b172c28a SHA512 09246a2b104b66f407d35d25407def13a49aaab1fefdb5c3693503d066f18c20b68057fdf7954feaff7281b37b2e503b43eba89b7977108d84cb51e16b57cb43 WHIRLPOOL 603283ad88a421b2da9b785adb688edd25529947cdba9dfaa1beea7d095d613c6bfb5c6cb53590dd4779c40965a2fbdd87abee2e5a430a32d6d3f059f514ef77
 DIST strace-4.7.tar.xz 403280 SHA256 c49cd98873c119c5f201356200a9b9687da1ceea83a05047e2ae0a7ac1e41195 SHA512 52bcdd4b7a842b20233737197aeb5baf12533ea088568c9eeb644172420b98c79b86213c8068b49733da0a790031301b832489f87244bc65460971d1b0398d1e WHIRLPOOL 7f19233da30b0eb3d30aa79a881ad0bc6fed818557a55f9193511fb990e0af9ce7f8f792c395691bbedfb66b71427b0c743ea45819d039491cb02dccb29f4565
 DIST strace-4.8.tar.xz 441712 SHA256 f492291f07a7c805c07a8395cce1ea054a6401ad414f4cc12185672215e1d7f8 SHA512 c3316382f60cd4d02eec1eef46a0ef2d000afbccf2c176a6fec652e1b3391685f0e33f184497cb3ccf54d72d460471a4945d3a864fb5bce1f45f32fdf132cfe3 WHIRLPOOL 0ca28920b73d3b70a87bffff77c9af6bb9179f0918589f90613e68a499f84cc399e306b4f1832e1dd9e825c94671fcb69a5f08f6c64e6000411553e0b911e6d2
+DIST strace-4.9.tar.xz 521728 SHA256 095bfea5c540b91d297ccac73b21b92fd54a24599fd70395db87ff9eb7fd6f65 SHA512 70d03b74067ad03940cda72dc057a44a8a33fc55790a8a3bfffb1c4d7442c2de7f3e975a01dc7c7b0430342e492579b2f3a007242d13c8a0feba1a1989f42b7b WHIRLPOOL cbe2a859f6dfb82c3df652ed1fbe8982348f9c6ab61491153ce735e857275904639c003853a02188f8bc567d2eae7a710683b09d9cff67c3a4b8d7a0eb9a082e
 EBUILD strace-4.5.19.ebuild 948 SHA256 3b1520822f1a6507ac971a021d8431da195015224acf4284d2761115353b80f9 SHA512 e963ec29865725e8e2a2bf89ed80047efb944fc7c6ad0b4ed2f53fb47cf7c2ce370cd2b75c646c7a2276634a705d3e9143b29ad2ffa37737fcc530a399572be9 WHIRLPOOL b41a9d1ef92ae98f285f39acaa5719cb48ee694effd85fb1cbf2ac206cd4685e875eed54ab53c78cac83ae5d82edb58277e224dbdba446e60b568b4e8e55ed95
 EBUILD strace-4.5.20-r2.ebuild 1149 SHA256 899be1758390897548d9e723414b34e5f637ddc2bd70bb3eb7cf276c40e0d614 SHA512 09e4fb2bfcd250f2b7735e40a78fd49e076794156aadc9560501d690415cccd06c2f73c0b51527eb6ca3c14354a470e881714f538ba6450ec78ad85ed61a0708 WHIRLPOOL 7c2122726bb217579b235fc61421120087affc09c610c9d143405d909d8d2dc565ba31ae163c7366f0e2fe9fcd13448673ac0271102f4a15ee6402b6c82f9b8b
 EBUILD strace-4.5.20.ebuild 985 SHA256 196019d7d1bf70afcac6a864658ca6a7a9857a3f002c82de9c9224df3c7309d6 SHA512 fd8c0cf0983a05ebfa0e227b790323a8009c2482816b953752b731acd0ee536ed9259a1b8304c072aa0d15c674833e664e2b2723dd26be9a538fa4294f0c3cb4 WHIRLPOOL b7c7849fe33683d4d70bb8785c620841e4de03633bf602607588db819a74a4b29ff6c96ebd6deedbf905cdc3cc5271a7c1bf80fe14fd4d011f0c326e0d636173
 EBUILD strace-4.6.ebuild 1120 SHA256 b2b175a7e1431e7de9406ee6512953bd5e40c8b326079c036c2446dd3e933d28 SHA512 c93fba937cf6f7758b8eb1a9ef7605a069fa2107ede542950df6b289ecedfe06da17c2e173ab7cb78c34501e157d7480d51ba1908b010d891bc25c77fbd465fa WHIRLPOOL 63b7c84f4d8a82beb9c65b9111d9d56ded68e82e3ffda8b56c838a0f6cc4e969fd43b03ea905454d0ebb0376e41b378548fb7abcb3967a2a8246f8708d171aaa
 EBUILD strace-4.7.ebuild 1276 SHA256 c3da8481bd2e92204f00c022aeb8b981ef8ceb7c93b7ec3986a89ccba1995a01 SHA512 267cf945ac25cb72e0f5c1e5fe5c078fef0f61dfd4222fade58d10d27be76d94376d6db224d2bc3eb227ee3c4d85ec58e2dda40d9c4e73a49dce58d3f94e4072 WHIRLPOOL b6b6221c776d0a62fca111e8b0ef0d301d87e7a5402005256a5e938f00efba4372ebc850337ba4434e58a824c4b9d201427c20342c72c426776cd5ec560366e9
-EBUILD strace-4.8.ebuild 1242 SHA256 049a182743094c7164bdad574afc629ca08b6a74e3403786f77a5a246c670e12 SHA512 aa84bcd6caff793dd066b7bfbb68367a6a604b9fd814564e4095acfbe5f53f38d161d231503c5c51d6e7ca74c8cd8b15621ede1b73e1009a28a058dd7efde681 WHIRLPOOL 965265e2c1dd1bf83ce681ed6b3cec8029e63b53e31952cd2828efdc7be1d7eb7b61db08952a1e495279f1d03fb9200aeb96b55aa973534c47461f0b1b08083f
-EBUILD strace-9999.ebuild 1255 SHA256 d95a8e160ee5aab6a8ea2ba5bea6b6832555a69768e3b4065072db8e3e6b8ee2 SHA512 0d28f6cfab2e903b9f3a350ee9cc3f782608f97aa6e78c771820e0e419980ae3e77872d190ba37086370e302c43600ccb59e521f664fbc432868e784c3602e75 WHIRLPOOL 2f9d025a5c3dfe6623418e8d09d966d8a430eafcc8aa07059e60a788ab95e97e378d3115fad13294708acbc2677bcc630a53fd7255b47543cca1481eec2b1189
-MISC ChangeLog 24220 SHA256 8d6c9ac433054ab03f64cdf38e269c3f73fcee31c0fd9b323a55c7cd7795a004 SHA512 37b6798bafc9898c8895ccbf3d3ca40eff2e6ef26da23afe058c7f86bf74c5bc2a4ec00abd2f988d1914f28e5fb412040c121698c269ff550b06e7f32c1e7767 WHIRLPOOL 48ff2416fce7eee676329708586318d50c54faee50fa3cb4baae9c01dbde93467581477d436389f12dbf563625d6c637b85c46d693ee419c428ee78385ad8e01
+EBUILD strace-4.8.ebuild 1243 SHA256 0e47daf43127b7e701112de46c5ba7cb731ab5d8aafadfddc2261b66d20a5d55 SHA512 cf8f15244da225ec86ae4589095bc294e84b19a039e2372df80b010e5a498518877967c5a83a1a03f4e9cb19763191aeb9d714bdd386861eca2e9703714ef36c WHIRLPOOL d7af123a3c62e3b46004b458889a7c78700f5c18f976aae8714b04840ee3ca2d729ef5cebd5d42db4765ba0b2f205076691b6b43506ed7ed1e191d3417c01dc5
+EBUILD strace-4.9.ebuild 1270 SHA256 1aea083053a987f23585ce67098353af7aa28098b3c39b5c6b85ab85bbbd337d SHA512 bef9744364a2b36c73c48e78b0d3aacad3a47aef62a6a5895140131bf4266605e0221dfb79ccd5e8f6a44dc92ac413cf5b7c1f73e8fb54a13febf38c2291d9d7 WHIRLPOOL 208b6e7376b2c9a2e6f29de176750d19c27632f15d7cc53a49aaa2fcfe7bc6aa6efe9e240174fb152f6a59d3e99fcc342a4345f015a1bf64f6f2d3052b5832d3
+EBUILD strace-9999.ebuild 1271 SHA256 c96827a3cb7546bab3f3e6a45682f8833f31e52cd07590a6876896fa34078fbc SHA512 8519c38464a65a1accc5394555aa912d377d8a41e1e832ba1c0adfe6b41528aac84e58066865bbd8127e03119924bf8eaa0f50923dec8181874f20f39c5d1ca8 WHIRLPOOL 08cb3e543e942d21c20c0538368c7367ae6106e1ac02f14d5bbd6a89c0dc4f320e791b87ce241f50dd8d4e9a7ce7228107b3276a8375a106a0b7983f4331681b
+MISC ChangeLog 24452 SHA256 7bf32fc9539ea3ae71a46b55615c79dbfda01f052701c83efa7864fbea9993cc SHA512 276a3c367c4bc1ebb1c5c584f16e41558e636b0ee31d1708dbebaeccb2500fec6cd3bc48f85b7577898a3f54fa497fc2979b101fe5ddf23a7b4c3e64455601ef WHIRLPOOL 4e3150a2939e1600d732896cc8a15a26cb5d852eb70f14dd035746c9740da4ecf2b4a02757311604dcf2aab5454c1bb822666bb819c0299243e588d7b47649bf
 MISC metadata.xml 305 SHA256 bd45e0108da45e19fd1d940ab451b2195fb9dc21d4c397435e2ca9c1848845ce SHA512 fb6e6f53e8754da30643d9fb07a30c2a11d0cdd91fe1b62498396d040242e5f164477715d84a2a89a1fb757a861a8cc8fa3a2ca67e85dc71ac436a5b4b07a56e WHIRLPOOL 0d316f0a6985a4c4b2b83a5a495e206d9a6b2cc53d5f4924cb9111bd9fab5d993cb550dc60e2fbadefff30bb386a786b78831745725f1bbed77f490f9c1dc87e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTMEpYAAoJELp701BxlEWfB9AP/04cWVw9kmHSorMjXZCbALQe
-eCnjxp19wtgSB2lZ/I2/pfw/2+MpWFqHLpiTeI0Nkac04QgqHJI2o73dl8/Txzvp
-CHRIATf8meJVMUOUoUsKTmY9OjPMSxEOvNN7b8QKi+ItKOPyS+QecBcuqA72DcNB
-QxWlPp7JPXgjATOxJ8HoceZHkdFQjfLXWcF1o+mpTv/jiMY+br7shHudLEOXXAEu
-dthv9AohntTNjvZOR0KqpjtQGSRycXfatsEWieiRr2HnV/HYlFcXoc5BLCyWETBf
-BZEI/yx0572RkdmnIzWeFE2yH3EMR80hR59pZBxK37q7BOi0tZnThXNaZjRI/kD/
-J2NCtZqP9JZw6hkC1/w1lxdMXtJrOaz2e9gHPs2u4dbY/UpTOtaIJKfOojMiDw/n
-BfnSyKy+MIQwI90+q76hJLV/9cKh0YsLhRs8BuQC2mOdfMAZy7pa6CkWHPqmkEcS
-HgUOOXTW4t/dfdFgEqIUlW8dcSQaExgQtinO6NMz0kj82NqnINJww5/Op+41cXe/
-um+9Vmup8/+KxK6swDr0msPD82clPDnW6id4UqJUfNPHHwYHRcD3zIMT5v04I0AS
-CGosXzULL9fpIAjrKQRGI2s9wuWf9g6oB0jYgLgaVx6odJoZSP12vhaW6pw1DmIr
-Om3OjQ4/iedIDzDp2l4r
-=9vgD
+iQIcBAEBCAAGBQJT7uquAAoJEPGu1DbS6WIA8vAQAInh0PJDs4jWnO5QRNdROXzS
+tY14I167tEAk/6DQdZs9rQygNbHF7bcGTTWTjn4bk/T38cLl8q8eSC3w+1tcZFQs
+cmzLKo4SpQQSfM70hR8wTKnrtehFqSkJpIHwrNLBHvZsugkGVbyU1bwHpsAbahvA
+CYGB+1orliuZfcRxccvt0qAe9bkD4nMap8EiYi6yoNfrC+xYrf6cuBVUsOHFt8xO
+BBpAEhg9w0ArXfckIRZQ/ndZyLTS1KcKGHqu3dXU1ZxiYxYSakd057wL8XHMcwC8
+FVmMlTZgOs96CcBgcWViu0oktl8jL0gmy+cGth0A/VXn/HvL++Nc8R2KcGArAJ8x
+bFFJELjYuhtHKJjikL5xWhTRtR7VpbdT5NIhWGqaCwyLKWDq4+MrK8lenWg6gX5d
+UE1EVqVPl2X924kRYJflABJgzB7sGzBANevqY1MqMDuw1K/CjTM/FmvmhiNczHLK
+K/2qUAVYj0yvZSSR683Rl8lp4XqLIIrOpWCTWzsH3fQVbs3BCZhMerwfxPc8ipCZ
+GfJpawWUl/Ub8IDN5Im8sWAUDr83XaVQsm0MDN96D5G+xp/E8bE86sAmVDjRx/d+
+3qX8xs1tkQqv7fkVvvY0LASFYxxygg9Px69KW2PHRG1x2Kb6aaTV8ACz19Y9u5sv
+4gMWLGKX/RE62hgsT/T/
+=+blL
 -----END PGP SIGNATURE-----
