@@ -4,9 +4,9 @@ DESCRIPTION=A useful diagnostic, instructional, and debugging tool
 EAPI=4
 HOMEPAGE=http://sourceforge.net/projects/strace/
 IUSE=aio +perl static
-KEYWORDS=alpha amd64 arm arm64 hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux
 LICENSE=BSD
 SLOT=0
-SRC_URI=mirror://sourceforge/strace/strace-4.8.tar.xz
+SRC_URI=mirror://sourceforge/strace/strace-4.9.tar.xz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=4d15fc8a731e2f844b9b0980c1b08164
+_md5_=a24090468f8b4a55ba86d8b109dd95aa
