@@ -3,11 +3,11 @@ DEPEND=>=sys-devel/m4-1.4.6 dev-lang/perl
 DESCRIPTION=Used to create autoconfiguration files
 HOMEPAGE=http://www.gnu.org/software/autoconf/autoconf.html
 IUSE=emacs multislot
-KEYWORDS=~alpha ~amd64 ~arm arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd
+KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd
 LICENSE=GPL-2
 PDEPEND=emacs? ( app-emacs/autoconf-mode )
 RDEPEND=>=sys-devel/m4-1.4.6 dev-lang/perl >=sys-devel/autoconf-wrapper-13
 SLOT=2.5
 SRC_URI=mirror://gnu/autoconf/autoconf-2.62.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=70d032b0493cd127fecfcd7f049a2636
+_md5_=73e6e03956d41291e307660c82d78b0f
