@@ -25,30 +25,30 @@ DIST autoconf-2.69.tar.xz 1214744 SHA256 64ebcec9f8ac5b2487125a86a7760d2591ac9e1
 EBUILD autoconf-2.13.ebuild 1958 SHA256 8e74d25458f11012de8b671f20572c2f866e035ff87f1c6c24c4ff529478cbe0 SHA512 7b627d7c7cb91683c3ec0cfdb21d4e99de2779621ace0640dd7bced92fdd62ed39ad56ee26059c4eb852eb059fc883a8479f0d02ed4876a9e4b05f71bf570e59 WHIRLPOOL f60d9a9330b74bea6755c295e727956a6f07ea3ebfabd2538934f8d25d2bb0818ad38e5848969c3b5304f8b7cd862e6945dcd57f06867f7e5721b0eb042ff896
 EBUILD autoconf-2.59-r7.ebuild 1482 SHA256 f29c051db5feb954598eea9fb7895705c2ecac36991c07cde4e3a92dfbec9af7 SHA512 a96ec25fe85509a96998a1563119c0d0a609890c40dc4690981a04329c93bab973b7774928e2d4017418b5d590428cf605f36e8fa29d3ab35c5d1b95567faca8 WHIRLPOOL 8723d342bb11c0fb94662941d2e01c40894040f68cb4f5311879cd15d0644bd96417ba55f9f3361a975ecd169b4d7960ab3f4c333d9a982e8a006251f4038974
 EBUILD autoconf-2.61-r2.ebuild 1558 SHA256 9a3a081c91202da5555cf3962bf10b414d893de0f81042bb0ff656f626cce1aa SHA512 f384cbe4f983d8169ddc673a8e653b63b9d4e611d9eb97f8f7d64cef3fc1031230475dd39edb952f265c956d96441ed50992c2dbcc33a29aa4586994c807292d WHIRLPOOL efb34521f0d3baf5ba18fb9521183a4be71f7234ae8d0508c8b43819190b51ac497338cb2157f707dc91bef931e5ae6a1d5819915ab6262f69bf58868880c3d5
-EBUILD autoconf-2.62-r1.ebuild 1619 SHA256 ad73fe86f9e36b61f926f82947ad0cdd224be76553ac1cebddfc4adf809b4ba3 SHA512 56417d3751743c72c04efeb92c98e2598106ce2368532d9ed9c60f643767372bd7791feca58b59cfb6ca09fb0194fbdd72f6816bfc98b888ae9cf4bfaca77af6 WHIRLPOOL abbfb57cc617ec8bab81655a32398689fb5c95378ae55a6541a5ca7d1afe25630a676d4b98c2d64687be91bcf9bce553c1912c4d06b18ba4b00ed8ebc008615d
+EBUILD autoconf-2.62-r1.ebuild 1607 SHA256 f19f9ef0a73849851ac73850ad4daec0b67e9138fd0067036d6e92cb0b8b7be9 SHA512 6e9c16151469ed905a3fcc0ca70bd55e92a09caf8b1bb76f3c65a4110c02c826c3511b6d5807e3f1cb9e1364017b366d19b73748f80355922dbf079d1903e8f2 WHIRLPOOL 64e4b7e93a0e0315ee5878fc4d518d0bc1ed39b332719e19d65f06fdb3b4cd17a3dcaca8138c55b671e24dfe9978367d706b322ec381295576c8757ebd943b4b
 EBUILD autoconf-2.63-r1.ebuild 1481 SHA256 3554af838ed213d582d0d0f03e5581ef767adf2a310d7aeecae05633b14c42bb SHA512 72e05c8835721db111703a73096c050f20a4df05ebb0f27fd70d7c45c3f82bda259ee47f7689d1f0c1026dd48d05639a1e683c4d33fbcae09b5d78f4f9939329 WHIRLPOOL e6e508ce7d28f5e1b63d28664a4a49ef36d09516996471fd5e7dc2855e8e52d54da5e21d13f37007dd8ebca9f9c347efb7a5a61bb1cc63fdf0c6ba0a542c3883
-EBUILD autoconf-2.64.ebuild 1495 SHA256 d9419d0678a693d26215c134a770fb9a734d7c701f29c7c73f498b4553dab5b6 SHA512 67f3e70e42ceefcc7518b1889330f9fa7f1ad4b5cf8a641eb47888ab25f2e5cd6bb8c57f989591d530e9b3f0d53363fcb40c3c7135a114bf2e9d6e7f441621f5 WHIRLPOOL 994a6a021f5db45ec4b9db423ccf87e78b7ac0b03124868546b62d5b30d12c411ee5e06a45533e6a5458103ca8104a2f0f38cc7860dd590c6399d738fb59756b
+EBUILD autoconf-2.64.ebuild 1483 SHA256 02a8d145a55b3ede4f6676e39d63023d501e5d72714639c9bb6c77670d295865 SHA512 ecd10abdc0522c3aad2b98e031000b039e6281ae184f739c7f35bd30702a84ca2e9dd5141c98af0aa1460d425ae4a8df295104fe02792182a92160d8f7ff135c WHIRLPOOL 3e78f93552b2106b9e571e9281adaf4d676e3bb57a4f6df8356db4f065c43dac98c46bde6fdf372346a609e1efb948c2691bf752affc7990d9b7097faaa65fab
 EBUILD autoconf-2.65-r1.ebuild 1542 SHA256 7a48b908196e2485c84972a44c9397a331704c05cf157e218e42574f6edad939 SHA512 b7cc3d6158a1d3842896accee08f69e29098d535abc83ed9438ab2aa17623307a9b57075e0279090b9a7fdffc9e15d0fc2cd7e51963bc8b8af5a4a13ed8239ba WHIRLPOOL 6349a49bb67e7090e83b726ed2649ae237115acd8709357b431e0ed7bccde5d769b219a92a4ed95586179dd49eab0607037e4775ebd940792b057bad12df8759
 EBUILD autoconf-2.67.ebuild 1664 SHA256 ef5e479f96f7f5bef4dda566ba2ce8ef718b48b0c3be8d14c0686be6557d6e62 SHA512 cc4df2b84c3a516de561362324e60a8b7f9c4f8872f4a74694ac4a19d52c195ff6460d8c070d979f609745efc07132ffcae3b823e279177bfc7a8a9b2ff4af4b WHIRLPOOL 11522dd26862e4791e2fe7c1a35d899ccefb8e2760c875f5e847a52fb4d28ad130ab99105b86161d3118052315d97c9c65fca769b6049a77e4f1f7f3a171eabd
 EBUILD autoconf-2.68.ebuild 1664 SHA256 7fd91a29e76b788d84185f7003d46266a4e1ec935c20793d0cb1c592015ef55b SHA512 9182d1de197910c5b9ff90f6f9f52086258136f6401c6c0f82a2dbbac3680c1932158ccb512717d7783f6e396aaf4a3be195172a4d04170ff09556c02de44a05 WHIRLPOOL 379c1b5c7cb69eaa11c5798e2f7bb3d5e9b4c0b381b5f545186d029594de59863422dcb743d292c8b38185b89f515ad413ae85e72087a4d6e409fef85b4f7f64
 EBUILD autoconf-2.69.ebuild 1743 SHA256 8aa18052aa99e4452acb513b779390f0869ae462359a1ddde52391cc18db3cde SHA512 467991185a451e19af8faa5666973611208f27915738aea7c77f7cf058d74f9a24aa85afde37460e9e6e055eee540ae460cd52c5ef7d1c7739ef1af1d09ee4ba WHIRLPOOL e7f74ea6314e6c12cf72dfbf1be0515f1f6f23877d4e86a0d0c27affa757649bd5650e2ce9cff7552769d802254103c0acfdbe392e0d9d3d6c5e45288a01ee0a
 EBUILD autoconf-9999.ebuild 1824 SHA256 82b5ae2c785242557ed866ac138f1c20bafb88b6ad19638721d0b2357c1d8767 SHA512 e7a1950f27982c94f7fadedc03d0ab6da9576ec71ccbc9c4db0506ce047e046d0fa117f834951c0c65766b87703b35f28eaf80226b2a0e9ceedadbba4e6497c7 WHIRLPOOL 6d1212f26cbfd9f49c07ef1788b5021becd6b4661dd7018ee78a5595fdac90931ac06cc41dce08994862d39c67e5eac47bd1880f29f1544bc550559dda53e8c5
-MISC ChangeLog 26545 SHA256 bd769ea39570f7e82f0d7b5fcebf2534e5e1ea7122e84198925683c1b4bcc54c SHA512 d1a556124dbc2fa7e511055a795e02c6b71f972115f2e4761d2c55eddf3d9213ed102fa5c17e00b3d750af1fd3fd2e636565b3ea177196108b92fb706cc4c316 WHIRLPOOL 29c76e85a402e2b1d28cba760886eb42b8da590b5975604a4abdbcb99307d55e7197235a7f47cbf32856780791a17e18d24796bc64b88f615d5381915d63133f
+MISC ChangeLog 26668 SHA256 0b8a5f3ab3a7733da525a4e366cc85e5b220e724e9e51135ef1f66811690cab6 SHA512 4157df48da2cc30865c3c0e415d7a570f20c70411034edac05be3445a6e96b0cc13e193078eaf09766b26ff233bc409c8583fd1140cd75a93a8625a33f1f492c WHIRLPOOL 33cb5a62874f9dbcfdd93113b0f6e553f244214fae3d57ddd9b8ce38b2eb6b78585438145e7ea415036f5c57e05ce4d6b7c7a40d2dddb693c0ab3b0bfa84e02b
 MISC metadata.xml 259 SHA256 117bfd466a62137b822e206f192aae9654b6e25f57eb2fdec3574184fa44b3fb SHA512 d1a946823a672af327a3b4d860263e3899c90b826463bf9fb85273b06edd6ef0cc74818455e629c49ebd46c4614f96cd3edacef07893a764f99426253a30c916 WHIRLPOOL c71bcf5c5caf6e62d7a34dea22ceeb899e3b379ab454299bc7afd50235b9febe5d75da44c27fe4ed87861c4540af0061d8e11cf4656f63a3065033c5e4607af6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJS/pCoAAoJEPGu1DbS6WIABAoP+wbC7B/VZxEsVYuKo3NE1Yog
-pwTT0uR9iSpTJtsf+EL5ik4ftB6w51c3Au151V/Kqsj7xOR0mvKormbRiMt0Wp16
-NbGzRJbLxodchdUw/qsyXIugH0Jc0etDPCMp+WvC3umK0tsCIqiUsLLE1Ja6h/C2
-fAAqm0P1BaCYdFroDSiIq5KQbM2wYHm0TeMBlBMLTG7cAPjsE4Ak69uFYAIxZ0iJ
-nKiH3bNmZp40X04PC9aO5hrtXc9jYNcfDjr3i9X4zfFWrMel30ZZNyXR8CG4xJEn
-PK3IE8ZYf4WErRjQJ+O41FRzp9g2XG/o7Mt1wuxiAcIJSv7GPTnK50099PTY2jE1
-mgb9rVsQcPG99Woqn7qq6Egl+wvmqBxMACnkSQEKNHJR8QzKILkmH/sK7SKs1iux
-tgk8Ent4aIuYwOw9b/y1TxgO2iE4+QNBlt76D8X4ZpM13jkY1BdLtSjZ7Lp9AW+/
-R/jNRv6ZO2tL1IDxBiz5MqvkBIXrzLlykEvUEnYO5mK6yCCu7GPgkNLVr3SU0fnl
-bigKBv/HLhwtu8dxSmSfOO+5lTwM5eKT97KWjRDnoAE9GcDegT+Lmz32G3ADrio+
-NTJYkizvidNY2VtBPfErdZbCyXcbLEMeiDPDD+H9r3rHpSlK5IC++4KbL+GFtPKi
-ChiYM5Ybmxs1OxuZCFWo
-=F6wr
+iQIcBAEBCAAGBQJT7ub1AAoJEPGu1DbS6WIAwy8P/3lCHv86xGN51hCwWb/M/WFg
+wOvhla/QMPSUkIiC0IZnbRZE2mZPr7vZDy3bKf8Qe4eeRlpQVjmL/PuppX4lypyg
+JzgYm1DiBcBBe703DOzcUW6WMqn2h3648CgwVfE7nTioiwJ6k+zk6Ilt2t9yWEgy
+Mz79MoOyB6x87lbikdGNhHf4zrKNJ/XmiN7fNjl5eB5Rra5MiLDWZMNSVWQfrQ/V
+rQfhvmWI73msJHurh9y71m/CELg+ljw+03V+y5fHLMDJnsTEe2bnUWNUmzmpocLF
+gjHpoLukklhQndX3io2QKhD2uei4MHr6LZ69x9f5zznscTVDM6X03uTHGYPifQJ6
+709UTW+SwKsBJBilJ9pR3Mkk+uCSeuuiLW7yN7yPlYeHPs3X5btCi3GtA/v8jk+a
+dCVIfn1h2gz6j3w15rYDct9vUFiCJkRYUohZ9sIzcwYNmJz3K6Rn59rbGP83xpAJ
+q3R7NhZFqg7D+dkyLpRrC5mlOhoYXovh1q7GOSGu2hqhl3ooLkJbrjS3jaXgGHva
+jC/XmC8QVIbXdpAhkPT2+qcKdNP+EFvCKWSWwSZ25aabzLAb8e4nB+kSSlH8LZYe
+PPguBobYDFCGRg1JmBUOzkupC34hDfqAujeWpOriWQKOcSrMe/Rey7VJ5gTJg7Tn
+saTKv3hZCVkDZvK/4Llf
+=Wr9j
 -----END PGP SIGNATURE-----
